Change exception handling approach